details.  The list of changes per contributor are as follows:


o   Jeremy Allison <jra@samba.org>
    
       
o   Andrew Bartlet <abartlet@samba.org>
    
    
o   Gerald (Jerry) Carter <jerry@samba.org>
    
    
o   Volker Lendecke <vl@samba.org>

    
o   Stefan Metzmacher <metze@samba.org>
    * Fix XFS quotas: HAVE_XFS_QUOTA -> HAVE_XFS_QUOTAS

o   Tim Potter <tpot@samba.org>


o   Richard Sharpe <shape@samba.org>

    
o   Jelmer Vernooij <jelmer@samba.org>
    * Add smbget utility - a wget-clone for the SMB/CIFS protocol.
    * Fix for libnss_wins on IRIX platforms.
    * Fix swatdir for --with-fhs.



Changes since 3.0.1
----------------------

    Parameter Name              Action
    --------------              ------
    ldap replication sleep      New


Commits
-------

o   Jeremy Allison <jra@samba.org>
    * Tidy up of NTLMSSP code.
    * Fixes for SMB signing errors
    * BUG 815: Workaround NT4 bug to support plaintext
      password logins and UNICODE.

    
o   Petri Asikainen <paca@sci.fi>
    * BUG 330, 387:Fix single valued attribute updates when 
      working with Novell NDS.
    
       
o   Andrew Bartlet <abartlet@samba.org>
    * Correctly handle per-pipe NTLMSSP inside a NULL session.
    * Fix segfault in gencache 
    * Fix early free() of encrypted_session_key.
    * Change DC lookup routines to more carefully separate
      DNS names (realms) from NetBIOS domain names.
    * Add new sid_to_dn() function for internal winbindd use.
    * Refactor cli_ds_enum_domain_trusts().
    * BUG 707: Implement range retrieval of ADS attributes (based 
      on work from Volker <vl@samba.org> and Guenther Deschner 
      <gd@suse.com>).
    * Automatically initialize the signing engine if a session key
      is available.
    * BUG 916: Do not perform a + -> ' ' substitution for squid URL 
      encoded strings, only form input in SWAT.
    * Resets the NTLMSSP state for new negotiate packets.