@@ -89,6 +89,7 @@ extern int DEBUGLEVEL;
 #define DBGC_WINBIND		11
 #define DBGC_VFS		12
 #define DBGC_IDMAP		13
+#define DBGC_QUOTA		14
 
 /* So you can define DBGC_CLASS before including debug.h */
 #ifndef DBGC_CLASS
